usuniecie niewaznych rzeczy

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /database/__pycache__/
 /__pycache__/
 /.vscode
+/aplication/__pycache__
+/aplication/__pycache__/
+/aplication/__pycache__/
+/aplication/__pycache__/
